syntax = "proto3";

package robotMultiplePointsMove;

service MultiplePointsMove {
    rpc Move (MultiplePointsInfo) returns (MoveResponse) {}
    rpc MoveAndWaitForArrival (MultiplePointsInfo) returns (MoveAndWaitForArrivalResponse) {}
}

message MultiplePointsInfo{
    //Mask value to indicate optional value
    // count   |   distance_tolerance    |    max_continuous_retries |
    //   4     |           2             |           1               |
    uint32 infoMask = 1;

    //required
    repeated string marker =2;

    //optional
    int32 count = 3;
    float distance_tolerance = 4;
    float max_continuous_retries = 5;
}

message MoveResponse {
    string command = 1;
    uint32 uuid = 2;
    string status = 3;
    string error_message = 4;
    uint32 task_id = 5;
}

message MoveAndWaitForArrivalResponse{
    string errorMessage = 1;
}

//protoc -I grpc/ grpc/mpm.proto --go_out=plugins=grpc:grpc/
